# chess_teacher

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  bandit.yaml  docker-compose.yml  dockerfile  makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  streamlit_app.py
.agents/: README.md  TODO.md
.agents/skills/chess-teacher-db/: SKILL.md
.github/actions/python-setup/: action.yml
.github/scripts/: set-gh-secrets-from-env.ps1
.github/workflows/: cd.yml  ci.yml  security.yml
apps/streamlit/: app.py
config/: config.py
deploy/: docker-compose.dev.yml  docker-compose.yml  schedule_nightly_dev_job.ps1
docs/: design_overview.md
orchestration/docker/: docker-compose.dev.yml  docker-compose.yml
orchestration/local/: nightly_dev_job.ps1  schedule_nightly_dev_job.ps1
pages/: home.py  pipeline.py  settings.py
scripts/: __init__.py  main.py  maintenance.py  nightly_job.py  pipeline.py
src/: __init__.py
src/database/: db.py
src/fetcher/: adapter.py
src/utils/: __init__.py  logging_utils.py  metadata_utils.py  pipeline_utils.py
streamlit_pages/: __init__.py  home.py  pipeline.py  play.py  settings.py  statistics.py
streamlit_utils/: __init__.py  auth.py  chart_legend.py  layout.py  login.py  pie_chart.py  platform_ui.py  progress_window.py  session_state.py
tests/: __init__.py  conftest.py
tests/database/: test_db.py
tests/utils/: test_env_utils.py  test_logging_utils.py  test_pipeline_utils.py  test_table_data_class.py  test_utils.py
views/: home.py  pipeline.py
(+43 files in other folders)
